# wave-function-collapse

./: Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
algorithm/: Cargo.toml
algorithm/src/: lib.rs  pattern.rs  pixel.rs  wave.rs
src/: lib.rs  main.ts  worker.ts
