[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
webp-animation = "0.7.0"
rand = { version = "0.8.5", features = ["alloc", "small_rng"] }
rustc-hash = "1.1"
rayon = "1.5"
bit-set = "0.5"
