[package]
name = "wave-function-collapse"
version = "0.1.0"
edition = "2021"
autobins = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
image = "0.24.3"
rand = { version = "0.8.5", features = ["alloc", "small_rng"] }
getrandom = { version = "0.2", features = ["js"] }
rustc-hash = "1.1"
rayon = "1.5"
bit-set = "0.5"
console_error_panic_hook = "0.1.7"
log = "0.4.21"
fern = "0.6.2"
console_log = "1.0.0"
js-sys = "0.3.69"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'OffscreenCanvasRenderingContext2d',
  'OffscreenCanvas',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'ImageData',
]
